@@ -59,7 +59,7 @@ p img       { float: left; margin: 1.5em 1.5em 1.5em 0; padding: 0; }
 p img.top   { margin-top: 0; } /* Use this if the image is at the top of the <p>. */
 img         { margin: 0 0 1.5em; }
 
-ul, ol      { margin:0 0 1.5em 1.5em; }
+ul, ol      { margin:0 1.5em 1.5em 1.5em; }
 ul          { list-style-type: circle; }
 ol          { list-style-type: decimal; }
 dl          { margin: 0 0 1.5em 0; }
