@@ -16,13 +16,7 @@
 	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection">
 	<link rel="stylesheet" href="../blueprint/plugins/buttons/buttons.css" type="text/css" media="screen, projection">	
 	<link rel="stylesheet" href="../blueprint/plugins/iepngfix/iepngfix.css" type="text/css" media="screen, projection">	
-  
-	<!-- Show the grid and baseline -->
-	<style type="text/css">
-	/*<![CDATA[*/
-			.container { background: url('../blueprint/lib/grid.png'); }
-	/*]]>*/
-	</style>
+
 </head>
 
 <body>
